--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: gson
-Title: Base Class and Methods for 'GSON'
-Version: 0.0.2
+Title: Base Class and Methods for 'gson' Format
+Version: 0.0.3
 Authors@R: c(
        person("Guangchuang", "Yu",     email = "guangchuangyu@gmail.com", role = c("aut", "cre", "cph"), comment = c(ORCID = "0000-0002-6485-8781"))
        )
-Description: 'GSON' is a new file format for storing gene set information proposed by this package. It provides GSON S4 class to store the information, as well as read, write and other utilities to process this file format.
+Description: Proposed a a new file format ('gson') for storing gene set and related information, and provides read, write and other utilities to process this file format.
 Imports:
   glue,
   jsonlite,
