--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: gson
 Title: Base Class and Methods for 'gson' Format
-Version: 0.0.6.991
+Version: 0.0.7
 Authors@R: c(
-       person("Guangchuang", "Yu",     email = "guangchuangyu@gmail.com", role = c("aut", "cre", "cph"), comment = c(ORCID = "0000-0002-6485-8781"))
+       person("Guangchuang", "Yu",     email = "guangchuangyu@gmail.com", role = c("aut", "cre", "cph"), comment = c(ORCID = "0000-0002-6485-8781")),
+       person(given = "Chun-Hui", family = "Gao", email = "gaospecial@gmail.com", role = "ctb", comment = c(ORCID = "0000-0002-1445-7939"))
        )
 Description: Proposes a new file format ('gson') for storing gene set and related information, and provides read, write and other utilities to process this file format.
 Imports:
