--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,13 @@ exportClasses(GSON)
 exportMethods(show)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(methods,"slot<-")
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(rlang,.data)
 importFrom(stats,setNames)
 importFrom(tidyr,separate)
+importFrom(utils,browseURL)
 importFrom(utils,packageVersion)
 importFrom(utils,stack)
+importFrom(yulab.utils,yread)
